// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getInsuranceData должен отфильтровать то, что не удалось достать 1`] = `
Array [
  Object {
    "key": "period",
    "name": "Даты",
    "value": "9 декабря 2017",
  },
  Object {
    "key": "region_name",
    "name": "Регион",
    "value": "Урал",
  },
  Object {
    "key": "insurance_type",
    "name": "Тип страховки",
    "value": "Другой",
  },
  Object {
    "key": "insurer_name",
    "name": "Страховая компания",
    "value": "Компания",
  },
]
`;

exports[`getInsuranceData должен правильно обработать все поля 1`] = `
Array [
  Object {
    "key": "period",
    "name": "Даты",
    "value": "9 декабря 2017 — 8 декабря 2018",
  },
  Object {
    "key": "region_name",
    "name": "Регион",
    "value": "Архангельская область",
  },
  Object {
    "key": "insurance_type",
    "name": "Тип страховки",
    "value": "ОСАГО",
  },
  Object {
    "key": "partner",
    "name": "Продавец",
    "url": "https://axsel-group.ru/stock-used",
    "value": "Аксель-Моторс",
  },
  Object {
    "key": "mileage_status",
    "name": "Пробег",
    "status": "OK",
    "value": "20 000 км",
  },
]
`;
